--- a/index.html
+++ b/index.html
@@ -1,5 +1,10 @@
 <!DOCTYPE html>
 <html>
+<style>
+body {
+  background-image: url('Trout_Slam_JK_20170920_076_1440x960-1-e1679792747614.jpg');
+}
+</style>
 <head>
 <title>iluvfishing</title>
 </head>
