--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@ body {
 <h1>i luv fishing!!!!</h1>
   
 <img src="sunset-striper-barnegat-bay-800x600.jpg" alt="W3Schools.com" width="800" height="600"> 
-  
+ <img src="20250817023702_1.jpg" alt="W3Schools.com" width="800" height="600"> 
 </body>
 </html>
