--- a/index.html
+++ b/index.html
@@ -16,3 +16,9 @@ body {
  <img src="20250817023702_1.jpg" alt="W3Schools.com" width="800" height="600"> 
 </body>
 </html>
+
+<html>
+<style>
+body {
+  background-image: url('images.jpg');
+}
