--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@ body {
   
 <img src="sunset-striper-barnegat-bay-800x600.jpg" alt="W3Schools.com" width="800" height="600"> 
  <img src="20250817023702_1.jpg" alt="W3Schools.com" width="800" height="600"> 
+  <body>
+        <h1>Feesh</h1>
   <img src="images.jpg" alt="W3Schools.com" width="800" height="600"> 
 </body>
 </html>
