--- a/index.html
+++ b/index.html
@@ -17,6 +17,11 @@ body {
   <body>
         <h1>Feesh</h1>
   <img src="images.jpg" alt="W3Schools.com" width="800" height="600"> 
+
+    <h1>leave a review!!</h1>
+<p contenteditable="true">
+</p>
+  
 </body>
 </html>
 
