--- a/index.html
+++ b/index.html
@@ -18,7 +18,26 @@ body {
   <body>
         <h1>Feesh</h1>
   <img src="images.jpg" alt="W3Schools.com" width="2400" height="600"> 
-
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Rainbow Text</title>
+    <style>
+        .rainbow-text {
+            font-size: 5em; /* Adjust font size as needed */
+            font-weight: bold;
+            text-align: center;
+            background: linear-gradient(to right, red, orange, yellow, green, blue, indigo, violet);
+            -webkit-background-clip: text; /* For WebKit browsers */
+            background-clip: text;
+            color: transparent; /* Make the text transparent to show the background */
+        }
+    </style>
+</head>
+<body>
+    <div class="rainbow-text">Feesh</div>
+</body>
+    
     <h1>leave a review!!</h1>
 <p contenteditable="true">
   tpye it in here
