--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ body {
         <h1>Feesh</h1>
   <img src="images.jpg" alt="W3Schools.com" width="2400" height="600"> 
 
-<iframe width="560" height="315" src="https://www.youtube.com/embed/aAD8eV06OcU?si=3CGQTV8DqqwlI9Qh" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/aAD8eV06OcU?si=3CGQTV8DqqwlI9Qh?autoplay=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     
     <h1>leave a review!!</h1>
 <p contenteditable="true">
