--- a/index.html
+++ b/index.html
@@ -25,7 +25,15 @@ body {
 <p contenteditable="true">
   tpye it in here
 </p>
-  
+
+    <dialog><p>idk how to do that but ty for trying!!</p></dialog>
+    <button onclick="openMe()">submit</button>
+
+      <script>
+          function openMe() { 
+              document.querySelector('dialog').showModal()
+          }
+      </script>
 </body>
 </html>
 
