--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@ body {
     <meter id="myMeter" value="0" max="100"></meter>
     <h3 id="counterPlace"> </h3>
       <script>
-       let MeterValue = document.getElementById("myMeter");
-        let myTextArea = document.getElementById("textarea");
+       let myValue = document.getElementById("myMeter");
+ 
 
           function increase() {
               var lenth = myTextArea.value.length; 
