--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@ body {
   <img src="images.jpg" alt="W3Schools.com" width="2400" height="600"> 
 
 <iframe width="560" height="315" src="https://www.youtube.com/embed/aAD8eV06OcU?si=3CGQTV8DqqwlI9Qh?rel=0&autoplay=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-    
+
+<img src="spinfish.gif" alt="spinny fish" width="800" height="600">
     <h1>leave a review!!</h1>
   <form action="#">
         <textarea id="textarea" cols="30" rows="10"></textarea>
