--- a/index.html
+++ b/index.html
@@ -12,6 +12,20 @@ body {
 
 <h1>i luv fishing!!!!</h1>
 
+  <audio id="myAudio">
+  <source src="funky.mp3" type="audio/mpeg">
+  Your browser does not support the audio element.
+</audio>
+
+<script>
+  var x = document.getElementById("myAudio");
+
+  function playAudio() {
+    x.play();
+  }
+</script>
+
+<button onclick="playAudio()">Play Sound</button>
   
 <img src="sunset-striper-barnegat-bay-800x600.jpg" alt="W3Schools.com" width="800" height="600"> 
  <img src="20250817023702_1.jpg" alt="W3Schools.com" width="800" height="600"> 
