--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ body {
 
     <div class ="container">
 <img src="spinfish.gif" alt="spinny fish" width="800" height="600">
-      <button onclick="playAudio()">Play Sound</button>
+      <button class="btn" onclick="playAudio()">Play Sound</button>
     </div>
     <h1>leave a review!!</h1>
 
