--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ body {
   transform: translate(-50%, -50%);
   -ms-transform: translate(-50%, -50%);
   background-color: #555;
-  color: white;
+  color: goldenrod;
   font-size: 16px;
   padding: 12px 24px;
   border: none;
