--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ body {
   left: 50%;
   transform: translate(-50%, -50%);
   -ms-transform: translate(-50%, -50%);
-  background-color: #555;
+  background-color: seashell;
   color: goldenrod;
   font-size: 16px;
   padding: 12px 24px;
