--- a/index.html
+++ b/index.html
@@ -119,6 +119,10 @@ body {
               document.querySelector('dialog').showModal()
           }
       </script>
+
+    <h1>idea for iluvfishing.org?</h1>
+    <a href="URL">https://docs.google.com/forms/d/e/1FAIpQLSeQJaGdHh-kbn7IhjrDkE65SAS8ievUK88mcCVljcgh2Ek3Ew/viewform?usp=dialog</a>
+    
 </body>
 </html>
 
