--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@ body {
       </script>
 
     <h1>idea for iluvfishing.org?</h1>
-    <a href="URL">https://docs.google.com/forms/d/e/1FAIpQLSeQJaGdHh-kbn7IhjrDkE65SAS8ievUK88mcCVljcgh2Ek3Ew/viewform?usp=dialog</a>
+    <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeQJaGdHh-kbn7IhjrDkE65SAS8ievUK88mcCVljcgh2Ek3Ew/viewform?embedded=true" width="640" height="601" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
     
 </body>
 </html>
