--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ body {
 <body>
 
 <h1>i luv fishing!!!!</h1>
-
+<a href="iluvfishing.org/blog">blog</a>
 
   
 <img src="sunset-striper-barnegat-bay-800x600.jpg" alt="W3Schools.com" width="800" height="600"> 
