--- a/index.html
+++ b/index.html
@@ -73,6 +73,8 @@ body {
 <img src="spinfish.gif" alt="spinny fish" width="800" height="600">
       <button class="btn" onclick="playAudio()">Play Sound</button>
     </div>
+      <img src="mrshark.jpg" alt="W3Schools.com" width="2400" height="600"> 
+
     <h1>leave a review!!</h1>
 
     
