--- a/index.html
+++ b/index.html
@@ -75,6 +75,8 @@ body {
     </div>
       <img src="mrshark.jpg" alt="W3Schools.com" width="2400" height="600"> 
 
+  <img src="Snapchat-15783045730.jpg" alt="W3Schools.com" width="800" height="600"> 
+      <img src="Snapchat-801353168.jpg" alt="W3Schools.com" width="800" height="600"> 
     <h1>leave a review!!</h1>
 
     
