--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ body {
   }
 </script>
 
-<!-- I was here :) -->
+<!-- I was here :() -->
 
     <div class ="container">
 <img src="spinfish.gif" alt="spinny fish" width="800" height="600">
