--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <style>
 body {
-  background-image: url('Trout_Slam_JK_20170920_076_1440x960-1-e1679792747614.jpg');
+  background-image: url('background.jpg');
 }
  /* Container needed to position the button. Adjust the width as needed */
 .container {
