--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <style>
 body {
   background-image: url('background.jpg');
+  background-size: cover;
+  background-attachment: fixed;
 }
  /* Container needed to position the button. Adjust the width as needed */
 .container {
