--- a/index.html
+++ b/index.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <style>
+.wrapper-main {
+  width:100%;
+  padding: 100px;
+  margin: 0 auto;
+  border: 4px solid seagreen;
+}
 body {
   background-image: url('background.jpg');
   background-size: cover;
@@ -42,7 +48,7 @@ body {
 <title>iluvfishing</title>
 </head>
 <body>
-
+<div class="wrapper-main">
 <h1>i luv fishing!!!!</h1>
 <a href="blog">blog</a>
 
@@ -128,7 +134,7 @@ body {
 
     <h1>idea for iluvfishing.org?</h1>
     <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeQJaGdHh-kbn7IhjrDkE65SAS8ievUK88mcCVljcgh2Ek3Ew/viewform?embedded=true" width="640" height="601" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
-    
+    </div>
 </body>
 </html>
 
