--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   border: 4px solid seagreen;
 }
 body {
-  background-image: url('background.jpg');
-  background-size: cover;
+  background-image: url('background.jpg') no-repeat;
+  background-size: contain;
   background-attachment: fixed;
 }
  /* Container needed to position the button. Adjust the width as needed */
