--- a/index.html
+++ b/index.html
@@ -7,10 +7,12 @@
   margin: 0 auto;
   border: 4px solid seagreen;
 }
+.img {
+  object-fit: contain;
+}
 body {
   background-image: url('background.jpg') no-repeat;
   background-size: contain;
-  background-attachment: fixed;
 }
  /* Container needed to position the button. Adjust the width as needed */
 .container {
@@ -52,14 +54,15 @@ body {
 <h1>i luv fishing!!!!</h1>
 <a href="blog">blog</a>
 
-  
+
 <img src="sunset-striper-barnegat-bay-800x600.jpg" alt="W3Schools.com" width="800" height="600"> 
  <img src="20250817023702_1.jpg" alt="W3Schools.com" width="800" height="600"> 
   <img src="rainbowfishy.png" alt="W3Schools.com" width="800" height="600"> 
   <body>
         <h1>Feesh</h1>
+<div class="img">  
   <img src="images.jpg" alt="W3Schools.com" width="2400" height="600"> 
-
+</div>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/aAD8eV06OcU?si=3CGQTV8DqqwlI9Qh?rel=0&autoplay=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
   <audio id="myAudio">
