--- a/index.html
+++ b/index.html
@@ -88,6 +88,8 @@ body {
 
   <img src="Snapchat-1573045730.jpg" alt="W3Schools.com" width="800" height="600"> 
       <img src="Snapchat-801353168.jpg" alt="W3Schools.com" width="800" height="600"> 
+      <img src="catfish.jpg" alt="W3Schools.com" width="800" height="600"> 
+      <img src="fishcat.jpg" alt="W3Schools.com" width="800" height="600">
     <h1>leave a review!!</h1>
 
     
