--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   margin: 0 auto;
   border: 4px solid seagreen;
 }
-.img {
+img {
   object-fit: contain;
 }
 body {
@@ -60,9 +60,9 @@ body {
   <img src="rainbowfishy.png" alt="W3Schools.com" width="800" height="600"> 
   <body>
         <h1>Feesh</h1>
-<div class="img">  
+  
   <img src="images.jpg" alt="W3Schools.com" width="2400" height="600"> 
-</div>
+
 <iframe width="560" height="315" src="https://www.youtube.com/embed/aAD8eV06OcU?si=3CGQTV8DqqwlI9Qh?rel=0&autoplay=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
   <audio id="myAudio">
