--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
   border: 4px solid seagreen;
 }
 img {
-  object-fit: contain;
+  max-width:100%;
+    object-fit: scale-down;
 }
 body {
   background-image: url('background.jpg') no-repeat;
