--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 body {
   background-image: url('background.jpg') no-repeat;
-  background-size: contain;
+  background-size: cover;
 }
  /* Container needed to position the button. Adjust the width as needed */
 .container {
