--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
 }
 
 body {
-  background-image: url('background.jpg') no-repeat;
+  background-image: url('background.jpg');
   background-size: cover;
+  background-attachment: fixed;
 }
  /* Container needed to position the button. Adjust the width as needed */
 .container {
