--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@ body {
 <img src="sunset-striper-barnegat-bay-800x600.jpg" alt="W3Schools.com" width="800" height="600"> 
  <img src="20250817023702_1.jpg" alt="W3Schools.com" width="800" height="600"> 
   <img src="rainbowfishy.png" alt="W3Schools.com" width="800" height="600"> 
+  <a href="clickfish.html">iluvfishclicking</a>
   <body>
         <h1>Feesh</h1>
   
