--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
 
 }
 
+@media {
+
+}
+
 body {
   background-image: url('background.jpg');
   background-size: cover;
@@ -44,6 +48,7 @@ body {
 </style>
 <head>
 <title>iluvfishing</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
 <div class="wrapper-main">
