--- a/clickfish.html
+++ b/clickfish.html
@@ -5,7 +5,7 @@
     </head>
     <body style="background-color: white;">
         <p style="text-align: center;">Fish Clicked:</p>
-        <p id="fish"></p>
+        <p style="text-align: center" id="fish"></p>
         <img style="text-align: center;" onclick="getClicked()" src="images/Rupert.png">
     </body>
 
