--- a/index.html
+++ b/index.html
@@ -144,6 +144,17 @@ body {
     <h1>idea for iluvfishing.org?</h1>
     <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeQJaGdHh-kbn7IhjrDkE65SAS8ievUK88mcCVljcgh2Ek3Ew/viewform?embedded=true" width="640" height="601" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
     </div>
+
+
+  <meta property="og:title" content="iluvfishing" />
+  <meta
+    property="og:description"
+    content="dont you luv fishing???"
+  />
+  <meta
+    property="og:image"
+    content="fishhold.jpg"
+  />
 </body>
 </html>
 
