--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@ body {
   />
   <meta
     property="og:image"
-    content="fishhold.jpg"
+    content="https://iluvfishing.org/fishhold.jpg"
   />
 </body>
 </html>
