--- a/clickfish.html
+++ b/clickfish.html
@@ -4,8 +4,8 @@
         <title>iluvfishclicking</title>
     </head>
     <body style="background-color: white;">
-        <p style="text-align: center;">Fish Clicked:</p>
-        <p style="text-align: center; font-size: 25px;" id="fish">0</p>
+        <p style="text-align: center; font-size: 30px;">Fish Clicked:</p>
+        <p style="text-align: center; font-size: 70px;" id="fish">0</p>
         <img style="text-align: center;" onclick="getClicked()" src="images/Rupert.png">
     </body>
 
