--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
 
 }
 
-@media (max-width: 600px){
+@media (orientation: portrait){
   .wrapper-main {
-    width: 100%;
+    background-color: coral;
   }
 }
 
