--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@ body {
 <title>iluvfishing</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
+<div class="wrapper-main"></div>
 <body>
-<div class="wrapper-main">
 <h1>i luv fishing!!!!</h1>
 <a href="blog">blog</a>
 
@@ -143,7 +143,7 @@ body {
 
     <h1>idea for iluvfishing.org?</h1>
     <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeQJaGdHh-kbn7IhjrDkE65SAS8ievUK88mcCVljcgh2Ek3Ew/viewform?embedded=true" width="640" height="601" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
-    </div>
+    
 
 
   <meta property="og:title" content="iluvfishing" />
@@ -156,6 +156,7 @@ body {
     content="https://iluvfishing.org/fishhold.jpg"
   />
 </body>
+</div>
 </html>
 
 
