--- a/index.html
+++ b/index.html
@@ -1,20 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
 <style>
-.wrapper-main {
 
-}
 
-@media (orientation: portrait){
-  .wrapper-main {
-    background-color: coral;
-  }
-}
+
 
 body {
   background-image: url('background.jpg');
   background-size: cover;
   background-attachment: fixed;
+}
+@media (orientation: portrait){
+  body {
+    background-color: coral;
+  }
 }
  /* Container needed to position the button. Adjust the width as needed */
 .container {
@@ -52,7 +51,6 @@ body {
 <title>iluvfishing</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
-<div class="wrapper-main"></div>
 <body>
 <h1>i luv fishing!!!!</h1>
 <a href="blog">blog</a>
@@ -156,7 +154,6 @@ body {
     content="https://iluvfishing.org/fishhold.jpg"
   />
 </body>
-</div>
 </html>
 
 
