--- a/clickfish.html
+++ b/clickfish.html
@@ -4,9 +4,21 @@
         <title>iluvfishclicking</title>
     </head>
     <body style="background-color: white;">
-        <p style="text-align: center; font-size: 30px;">Fish Clicked:</p>
-        <p style="text-align: center; font-size: 70px;" id="fish">0</p>
-        <img style="text-align: center;" onclick="getClicked()" src="images/Rupert.png">
+        <div style="text-align: center;font-family: 'Times New Roman';">
+            <p style= "font-size: 20px;">Fish Clicked:</p>
+            <p style= "font-size: 50px;" id="fish">0</p>
+            <img onclick="getClicked()" src="images/Rupert.png">
+        </div>
+        <div style="margin-left: 50px;">
+            <u style="font-size: 40px; ">Leaderboard:</u>
+            <p style="font-size: 20px;margin-left: 30px;">Dave: 99999</p>
+            <p style="font-size: 20px;margin-left: 30px;">Emily: 68798</p>
+            <p style="font-size: 20px;margin-left: 30px;">XxKi11erxX: 23987</p>
+            <p style="font-size: 20px;margin-left: 30px;">Stuart: 8734</p>
+            <p style="font-size: 20px;margin-left: 30px;">Bingus: 4322</p>
+            <p style="font-size: 20px;margin-left: 30px;">Mr. Olsen: 954</p>
+            <p style="font-size: 20px;margin-left: 30px;">DaveII: 3</p>
+        </div>
     </body>
 
     <script>
