--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ body {
 .container .btn:hover {
   background-color: aquamarine;
 } 
-@media only screen and (orientation: portrait) {
+@media only screen and (max-width: 600px) {
   body {
     background-color: coral;
   }
