--- a/clickfish.html
+++ b/clickfish.html
@@ -9,15 +9,18 @@
             <p style= "font-size: 50px;" id="fish">0</p>
             <img onclick="getClicked()" src="images/Rupert.png">
         </div>
-        <div style="margin-left: 50px;">
-            <u style="font-size: 40px; ">Leaderboard:</u>
-            <p style="font-size: 20px;margin-left: 30px;">Dave: 99999</p>
-            <p style="font-size: 20px;margin-left: 30px;">Emily: 68798</p>
-            <p style="font-size: 20px;margin-left: 30px;">XxKi11erxX: 23987</p>
-            <p style="font-size: 20px;margin-left: 30px;">Stuart: 8734</p>
-            <p style="font-size: 20px;margin-left: 30px;">Bingus: 4322</p>
-            <p style="font-size: 20px;margin-left: 30px;">Mr. Olsen: 954</p>
-            <p style="font-size: 20px;margin-left: 30px;">DaveII: 3</p>
+        <div style="margin-left: 50px; display:flex;">
+            <div>
+                <u style="font-size: 40px; ">Leaderboard:</u>
+                <p style="font-size: 20px;margin-left: 30px;">Dave: 99999</p>
+                <p style="font-size: 20px;margin-left: 30px;">Emily: 68798</p>
+                <p style="font-size: 20px;margin-left: 30px;">XxKi11erxX: 23987</p>
+                <p style="font-size: 20px;margin-left: 30px;">Stuart: 8734</p>
+                <p style="font-size: 20px;margin-left: 30px;">Bingus: 4322</p>
+                <p style="font-size: 20px;margin-left: 30px;">Mr. Olsen: 954</p>
+                <p style="font-size: 20px;margin-left: 30px;">DaveII: 3</p>
+            </div>
+            <button style="height: 60px; width:200px; font-size: 40px; margin-left: 90px; margin-top: 100px;" href="index.html"> Get Back!</button>
         </div>
     </body>
 
