--- a/clickfish.html
+++ b/clickfish.html
@@ -20,7 +20,7 @@
                 <p style="font-size: 20px;margin-left: 30px;">Mr. Olsen: 954</p>
                 <p style="font-size: 20px;margin-left: 30px;">DaveII: 3</p>
             </div>
-            <button style="height: 60px; width:200px; font-size: 40px; margin-left: 90px; margin-top: 100px;" href="index.html"> Get Back!</button>
+            <button style="height: 60px; width:200px; font-size: 40px; margin-left: 90px; margin-top: 100px;" href="iluvfishing.org"> Get Back!</button>
         </div>
     </body>
 
