--- a/index.html
+++ b/index.html
@@ -5,11 +5,7 @@
 
 
 
-body {
-  background-image: url('background.jpg');
-  background-size: cover;
-  background-attachment: fixed;
-}
+
 
 
  /* Container needed to position the button. Adjust the width as needed */
@@ -43,10 +39,13 @@ body {
 .container .btn:hover {
   background-color: aquamarine;
 } 
-@media only screen and (max-width: 600px) {
-  body {
-    background-color: coral;
-  }
+
+#myVideo {
+  position: fixed;
+  right: 0;
+  bottom: 0;
+  min-width: 100%; 
+  min-height: 100%;
 }
 </style>
 <head>
@@ -54,6 +53,10 @@ body {
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
+  <video autoplay muted loop id="myVideo">
+  <source src="Bckg.mp4" type="video/mp4">
+</video>
+
 <h1>i luv fishing!!!!</h1>
 <a href="blog">blog</a>
 
