--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
   z-index: -1;
   top: 0;
   left: 0;
-  min-width: 100%;
-  min-height: 100%;
+  min-width: 100dvh;
+  min-height: 100dvh;
 }
 </style>
 <head>
