--- a/index.html
+++ b/index.html
@@ -41,10 +41,8 @@
 } 
 
 .video-bg {
-  position: absolute;
+  position: static;
   z-index: -1;
-  top: 0;
-  left: 0;
   min-width: 100dvh;
   min-height: 100dvh;
 }
