--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
 .video-bg {
   position: fixed;
   z-index: -1;
-  min-width: 100dvh;
-  min-height: 100dvh;
+  min-width: 100%;
+  min-height: 100%;
 }
 </style>
 <head>
