--- a/index.html
+++ b/index.html
@@ -43,8 +43,11 @@
 .video-bg {
   position: fixed;
   z-index: -1;
-  width: 100dvh;
-  height: 100dvh;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 100%;
+  height: 100%;
 }
 </style>
 <head>
