--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  width: 100%;
-  height: 100%;
+  width: 100dvh;
+  height: 100dvh;
 }
 </style>
 <head>
