--- a/index.html
+++ b/index.html
@@ -43,11 +43,14 @@
 .video-bg {
   position: fixed;
   z-index: -1;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  min-width: 100%;
+  min-height: 100%;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  width: 100dvh;
-  height: 100dvh;
 }
 </style>
 <head>
@@ -55,6 +58,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
+
   <video class="video-bg" autoplay muted loop id="myVideo">
   <source src="Bckg.mp4" type="video/mp4">
 </video>
