--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
   position: fixed;
   z-index: -1;
   width: 100%;
-  height: 100%;
+  height: 100dvh;
   overflow: hidden;
   object-fit: fill;
   min-width: 100%;
