--- a/blog.html
+++ b/blog.html
@@ -8,6 +8,10 @@
 </head>
   <body>
     <h1>iluvfishing</h1>
+    <p>Glenn Greenfield: 14201 Jennifer Rd</p>
+    <p>Liam Osborn: 8542 S 160th Ave</p>
+    <p>Mason Szatko: 13018 Morning View Dr</p>
+
   </body>
 </html>
 
