--- a/clickfish.html
+++ b/clickfish.html
@@ -2,8 +2,22 @@
 <html lang="en">
     <head>
         <title>iluvfishclicking</title>
+        <style>
+            a.button {
+            padding: 1px;
+            border-style: outset;
+            border-width: 5px;
+            border-radius: 10px;
+             color:rgba(0, 0, 0, 0.767);
+             background-position: center;
+            background-image: url(background.jpg);
+            border-color:rgb(0, 0, 0);
+            text-decoration:underline wavy rgba(0, 132, 255, 0.329);}
+            
+        </style>
     </head>
     <body style="background-color: white;">
+        
         <div style="text-align: center;font-family: 'Times New Roman';">
             <p style= "font-size: 20px;">Fish Clicked:</p>
             <p style= "font-size: 50px;" id="fish">0</p>
@@ -20,7 +34,7 @@
                 <p style="font-size: 20px;margin-left: 30px;">Mr. Olsen: 954</p>
                 <p style="font-size: 20px;margin-left: 30px;">DaveII: 3</p>
             </div>
-            <button style="height: 60px; width:200px; font-size: 40px; margin-left: 90px; margin-top: 100px;" href="iluvfishing.org"> Get Back!</button>
+            <a class='button' style="height: 60px; font-size: 40px; margin-left: 90px; margin-top: 100px;" href="index.html">Get Back!</a>
         </div>
     </body>
 
