--- a/index.html
+++ b/index.html
@@ -39,7 +39,9 @@
 .container .btn:hover {
   background-color: aquamarine;
 } 
-
+h1 {
+  background-image: url("txtbg.png");
+}
 .video-bg {
   position: fixed;
   z-index: -1;
