--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 .container .btn:hover {
   background-color: aquamarine;
 } 
-h1 {
+.bgtxt {
   background-image: url("txtbg.png");
 }
 .video-bg {
@@ -65,8 +65,9 @@ h1 {
   <video class="video-bg" autoplay muted loop id="myVideo">
   <source src="Bckg.mp4" type="video/mp4">
 </video>
-
+<div class="bgtxt">
 <h1>i luv fishing!!!!</h1>
+</div>
 <a href="blog">blog</a>
 
 
