--- a/clickfish.html
+++ b/clickfish.html
@@ -10,7 +10,7 @@
             border-radius: 10px;
             }
             .containery{
-            position: absolute;
+            position: fixed;
             width: 176px;
             height: 60px;
             border-radius: 10px;
