--- a/clickfish.html
+++ b/clickfish.html
@@ -10,7 +10,7 @@
             border-radius: 10px;
             }
             .containery{
-            position: fixed;
+            position: absolute;
             width: 176px;
             height: 60px;
             border-radius: 10px;
@@ -45,7 +45,7 @@
                 <p style="font-size: 20px;margin-left: 30px;">DaveII: 3</p>
             </div>
             <div class="container" style="text-align: center;">
-                <div class="containery"><video style="transform: scaleX(1.55);" loop muted autoplay src="Bckg.mp4"></video></div>
+                <div class="containery"><video style="transform: scale(0.1);" loop muted autoplay src="Bckg.mp4"></video></div>
                 <div class="containery"><a class='button' style="height: 60px; font-size: 40px;" href="index.html">Get Back!</a></div>
             </div>
         </div>
