--- a/clickfish.html
+++ b/clickfish.html
@@ -16,6 +16,9 @@
             border-radius: 10px;
             }
             a.button {
+            position: absolute;
+            width: 176px;
+            height: 60px;
             border-style: outset;
             border-width: 5px;
             border-radius: 10px;
