--- a/clickfish.html
+++ b/clickfish.html
@@ -47,8 +47,8 @@
                 <p style="font-size: 20px;margin-left: 30px;">Mr. Olsen: 954</p>
                 <p style="font-size: 20px;margin-left: 30px;">DaveII: 3</p>
             </div>
-            <div class="container" style="text-align: center;">
-                <div class="containery"><video class="containery" loop muted autoplay src="Bckg.mp4"></video></div>
+            <div class="container" style="text-align: center; margin-top: 150px;">
+                <div class="containery"><video class="containery" style="transform: scaleX(1.67);margin-top: 5px; margin-left: 5px;" loop muted autoplay src="Bckg.mp4"></video></div>
                 <div class="containery"><a class='button' style="height: 60px; font-size: 40px;" href="index.html">Get Back!</a></div>
             </div>
         </div>
