--- a/index.html
+++ b/index.html
@@ -107,6 +107,7 @@
       <img src="Snapchat-801353168.jpg" alt="W3Schools.com" width="800" height="600"> 
       <img src="catfish.jpg" alt="W3Schools.com" width="800" height="600"> 
       <img src="fishcat.jpg" alt="W3Schools.com" width="800" height="600">
+      <img src="garfieldfish.jpg" alt="W3Schools.com" width="800" height="600"> 
     <h1>leave a review!!</h1>
 
     
