--- a/clickfish.html
+++ b/clickfish.html
@@ -64,7 +64,7 @@
         document.getElementById("fish").innerHTML = clicks;
 
         var audio = document.getElementById("fishSound");
-        
+        audio.currentTime = 0; // rewind to start
         audio.play();
 
 
@@ -72,3 +72,4 @@
     </script>
 
 </html>
+
