--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   background-color: aquamarine;
 } 
 .bgtxt {
-  background-image: url("txtbg.png");
+  background-image: url("images/txtbg.png");
 }
 .video-bg {
   position: fixed;
@@ -71,14 +71,14 @@
 <a href="blog">blog</a>
 
 
-<img src="sunset-striper-barnegat-bay-800x600.jpg" alt="W3Schools.com" width="800" height="600"> 
- <img src="20250817023702_1.jpg" alt="W3Schools.com" width="800" height="600"> 
-  <img src="rainbowfishy.png" alt="W3Schools.com" width="800" height="600"> 
+<img src="images/sunset-striper-barnegat-bay-800x600.jpg" alt="W3Schools.com" width="800" height="600"> 
+ <img src="images/20250817023702_1.jpg" alt="W3Schools.com" width="800" height="600"> 
+  <img src="images/rainbowfishy.png" alt="W3Schools.com" width="800" height="600"> 
   <a href="clickfish.html">iluvfishclicking</a>
   <body>
         <h1>Feesh</h1>
   
-  <img src="images.jpg" alt="W3Schools.com" width="2400" height="600"> 
+  <img src="images/images.jpg" alt="W3Schools.com" width="2400" height="600"> 
 
 <iframe width="560" height="315" src="https://www.youtube.com/embed/aAD8eV06OcU?si=3CGQTV8DqqwlI9Qh?rel=0&autoplay=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
@@ -98,16 +98,16 @@
 <!-- I was here :) -->
 
     <div class ="container">
-<img src="spinfish.gif" alt="spinny fish" width="800" height="600">
+<img src="images/spinfish.gif" alt="spinny fish" width="800" height="600">
       <button class="btn" onclick="playAudio()">Play Sound</button>
     </div>
-      <img src="mrshark.jpg" alt="W3Schools.com" width="2400" height="600"> 
+      <img src="images/mrshark.jpg" alt="W3Schools.com" width="2400" height="600"> 
 
-  <img src="Snapchat-1573045730.jpg" alt="W3Schools.com" width="800" height="600"> 
-      <img src="Snapchat-801353168.jpg" alt="W3Schools.com" width="800" height="600"> 
-      <img src="catfish.jpg" alt="W3Schools.com" width="800" height="600"> 
-      <img src="fishcat.jpg" alt="W3Schools.com" width="800" height="600">
-      <img src="garfieldfish.jpg" alt="W3Schools.com" width="800" height="600"> 
+  <img src="images/Snapchat-1573045730.jpg" alt="W3Schools.com" width="800" height="600"> 
+      <img src="images/Snapchat-801353168.jpg" alt="W3Schools.com" width="800" height="600"> 
+      <img src="images/catfish.jpg" alt="W3Schools.com" width="800" height="600"> 
+      <img src="images/fishcat.jpg" alt="W3Schools.com" width="800" height="600">
+      <img src="images/garfieldfish.jpg" alt="W3Schools.com" width="800" height="600"> 
     <h1>leave a review!!</h1>
 
     
@@ -167,7 +167,7 @@
   />
   <meta
     property="og:image"
-    content="https://iluvfishing.org/fishhold.jpg"
+    content="https://iluvfishing.org/images/fishhold.jpg"
   />
 </body>
 </html>
