--- a/clickfish.html
+++ b/clickfish.html
@@ -48,13 +48,13 @@
                 <p style="font-size: 20px;margin-left: 30px;">DaveII: 3</p>
             </div>
             <div class="container" style="text-align: center; margin-top: 150px;">
-                <div class="containery"><video class="containery" style="transform: scaleX(1.67);margin-top: 5px; margin-left: 5px;" loop muted autoplay src="Bckg.mp4"></video></div>
+                <div class="containery"><video class="containery" style="transform: scaleX(1.67);margin-top: 5px; margin-left: 5px;" loop muted autoplay src="videos/Bckg.mp4"></video></div>
                 <div class="containery"><a class='button' style="height: 60px; font-size: 40px;" href="index.html">Get Back!</a></div>
             </div>
         </div>
     </body>
 
-    <audio id="fishSound" src="fishsound.mp3" preload="auto"></audio>
+    <audio id="fishSound" src="sounds/fishsound.mp3" preload="auto"></audio>
 
     <script>
      var clicks = 0;
