--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 <body>
 
   <video class="video-bg" autoplay muted loop id="myVideo">
-  <source src="Bckg.mp4" type="video/mp4">
+  <source src="videos/Bckg.mp4" type="video/mp4">
 </video>
 <div class="bgtxt">
 <h1>i luv fishing!!!!</h1>
@@ -83,7 +83,7 @@
 <iframe width="560" height="315" src="https://www.youtube.com/embed/aAD8eV06OcU?si=3CGQTV8DqqwlI9Qh?rel=0&autoplay=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
   <audio id="myAudio">
-  <source src="funky.mp3" type="audio/mpeg">
+  <source src="sounds/funky.mp3" type="audio/mpeg">
   Your browser does not support the audio element.
 </audio>
 
