--- a/index.html
+++ b/index.html
@@ -108,6 +108,9 @@
       <img src="images/catfish.jpg" alt="W3Schools.com" width="800" height="600"> 
       <img src="images/fishcat.jpg" alt="W3Schools.com" width="800" height="600">
       <img src="images/garfieldfish.jpg" alt="W3Schools.com" width="800" height="600"> 
+      <img src="images/guy.png" alt="W3Schools.com" width="800" height="600"> 
+      <img src="images/guy2.jpg" alt="W3Schools.com" width="800" height="600"> 
+      <img src="images/sun.jpg" alt="W3Schools.com" width="800" height="600"> 
     <h1>leave a review!!</h1>
 
     
