--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   background-color: aquamarine;
 } 
 h1 {
-  background-image: url("images/txtbg.png");
+  background-color: coral;
   z-index: -1;
 }
 .video-bg {
