--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@ h1 {
 <div class="bgtxt">
 <h1>i luv fishing!!!!</h1>
 </div>
+<h1>anything is fish if u put it in water!!!</h1>
 <a href="blog">blog</a>
 
 
