--- a/index.html
+++ b/index.html
@@ -114,6 +114,7 @@ h1 {
       <img src="images/guy.png" alt="W3Schools.com" width="800" height="600"> 
       <img src="images/guy2.jpg" alt="W3Schools.com" width="800" height="600"> 
       <img src="images/sun.jpg" alt="W3Schools.com" width="800" height="600"> 
+      <img src="images/blob.png" alt="W3Schools.com" width="800" height="600"> 
     <h1>leave a review!!</h1>
 
     
