--- a/blog.html
+++ b/blog.html
@@ -3,37 +3,55 @@
 <html>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-	<head>
-		<title>FLIP Fluid</title>
-		<style>
-			body {
-				font-family: verdana; 
-				font-size: 15px;
-			}			
-			.button {
-				background-color: #606060;
-				border: none;
-				color: white;
-				padding: 10px 10px;
-				font-size: 16px;
-				margin: 4px 2px;
-				cursor: pointer;
-			}
-			.slider {
-				-webkit-appearance: none;
-				width: 80px;
-				height: 6px;
-				border-radius: 5px;
-				background: #d3d3d3;
-				outline: none;
-				opacity: 0.7;
-				-webkit-transition: .2s;
-				transition: opacity .2s;
-			}
-		</style>
-	</head>
-	
-<body>
+	<style>
+      body {
+        font-family: verdana;
+        font-size: 15px;
+        margin: 0;
+        padding: 0;
+        overflow: hidden; /* no scrollbars */
+      }
+
+      /* Video background */
+      .video-bg {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        z-index: -1; /* puts it behind everything */
+      }
+
+      .button {
+        background-color: #606060;
+        border: none;
+        color: white;
+        padding: 10px 10px;
+        font-size: 16px;
+        margin: 4px 2px;
+        cursor: pointer;
+      }
+
+      .slider {
+        -webkit-appearance: none;
+        width: 80px;
+        height: 6px;
+        border-radius: 5px;
+        background: #d3d3d3;
+        outline: none;
+        opacity: 0.7;
+        transition: opacity .2s;
+      }
+    </style>
+  </head>
+
+  <body>
+    <!-- Background video -->
+    <video autoplay muted loop class="video-bg">
+      <source src="videos/Bckg.mp4" type="video/mp4">
+      Your browser does not support the video tag.
+    </video>
 
 	<input type = "checkbox" checked  onclick = "scene.showParticles = !scene.showParticles">Particles &nbsp; 
 	<input type = "checkbox" onclick = "scene.showGrid = !scene.showGrid">Grid &nbsp;
