--- a/blog.html
+++ b/blog.html
@@ -23,6 +23,16 @@
         z-index: -1; /* puts it behind everything */
       }
 
+      .button {
+        background-color: #606060;
+        border: none;
+        color: white;
+        padding: 10px 10px;
+        font-size: 16px;
+        margin: 4px 2px;
+        cursor: pointer;
+      }
+
       .slider {
         -webkit-appearance: none;
         width: 80px;
