--- a/blog.html
+++ b/blog.html
@@ -43,6 +43,9 @@
         opacity: 0.7;
         transition: opacity .2s;
       }
+      canvas {
+        background: transparent;
+      }
     </style>
   </head>
 
@@ -65,7 +68,7 @@
 <script>
 
 	var canvas = document.getElementById("myCanvas");
-	var gl = canvas.getContext("webgl");	
+	var gl = canvas.getContext("webgl", {alpha: true});	
 	canvas.width = window.innerWidth - 20;
 	canvas.height = window.innerHeight - 20;
 
@@ -862,7 +865,7 @@
 
 	function draw() 
 	{
-		gl.clearColor(0.0, 0.0, 0.0, 1.0);
+		gl.clearColor(0.0, 0.0, 0.0, 0.0);
 		gl.clear(gl.COLOR_BUFFER_BIT);
 
 		gl.viewport(0, 0, gl.canvas.width, gl.canvas.height);
