--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@ h1 {
 </div>
 <h1>anything is fish if u put it in water!!!</h1>
 <a href="blog">blog</a>
+<a href="blog2">blog2</a>
 
 
 <img src="images/sunset-striper-barnegat-bay-800x600.jpg" alt="W3Schools.com" width="800" height="600"> 
