--- a/blog2.html
+++ b/blog2.html
@@ -4,11 +4,14 @@
 	<head>
 		<title>Water 3d</title>
 		<style>
-		body {
-			font-family: verdana; 
+			body {
+			margin: 0;
+			padding: 0;
+			font-family: verdana;
 			font-size: 15px;
-		}
-		.button {
+			overflow: hidden; /* prevent scrollbars */
+			}
+			.button {
 			background-color: #606060;
 			border: none;
 			color: white;
@@ -16,10 +19,32 @@
 			font-size: 16px;
 			margin: 4px 2px;
 			cursor: pointer;
+			position: relative;
+			z-index: 2; /* keep buttons above video + canvas */
+			}
+			#bg-video {
+			position: fixed;
+			top: 0;
+			left: 0;
+			min-width: 100%;
+			min-height: 100%;
+			object-fit: cover;
+			z-index: -1; /* push behind everything */
+			}
+			#container {
+			position: relative;
+			z-index: 1; /* canvas above video */
+			}
 		</style>
 	</head>
 	
 	<body>
+		<!-- background video -->
+		<video autoplay muted loop id="bg-video">
+  			<source src="Bckg.mp4" type="video/mp4">
+  			Your browser does not support the video tag.
+		</video>
+		
 		<button id = "buttonRun" onclick="run()" class="button">Run</button>
 		<button onclick="restart()" class="button">Restart</button>
 
