--- a/blog2.html
+++ b/blog2.html
@@ -14,6 +14,7 @@
 			.button {
 				background-color: #606060;
 				border: none;
+				color: white;
 				padding: 15px 32px;
 				font-size: 16px;
 				margin: 4px 2px;
@@ -40,7 +41,7 @@
 	<body>
 		<!-- background video -->
 		<video autoplay muted loop id="bg-video">
-  			<source src="Bckg.mp4" type="video/mp4">
+  			<source src="videos/Bckg.mp4" type="video/mp4">
   			Your browser does not support the video tag.
 		</video>
 
