--- a/blog2.html
+++ b/blog2.html
@@ -2,7 +2,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <html lang="en">
 	<head>
-		<title>Water 3d</title>
+		<title>Blog 2</title>
 		<style>
 			body {
 				margin: 0;
